# task

./: .gitignore  CMakeLists.txt  README.md  TODO.md
docs/: Chronometer.md  Counter.md  FlowAlgorithm.md  For.md  If.md  ProgressMonitor.md  Runnable.md  SignalSlot.md  algorithm.html  chronometer.html  code-highlighter.js  counter.html  filelogger.html  flowalgorithm.html  for.html  if.html  index.html  index.md  logger.html  parallelalgorithm.html  progressmonitor.html  runnable.html  signalslot.html  styles.css  switch.html  task.html  taskobserver.html  taskqueue.html  threadpool.html
docs/code/: switch-async.cxx  switch-detail.cxx  switch-example.cxx  switch-int-based.cxx  switch-interface.h  switch-string-based.cxx
docs/examples/: concurrent.md  data-processor.md  dataframe-integration.md  parallel.md
docs/html/: algorithm.html  parallelalgorithm.html  signalslot.html  task.html
docs/md/: Algorithm.md  FileLogger.md  ParallelAlgorithm.md  TaskObserver.md  TaskQueue.md  ThreadPool.md  index.md
examples/complete-example/: AnomalyDetector.h  DataAggregator.h  DataMonitor.h  DataParser.h  README.md  ResultReporter.h  SensorDataPipeline.h  main.cxx  types.h
examples/concurrent/: CMakeLists.txt  main.cxx
examples/counter/: CMakeLists.txt  main.cxx
examples/data-processor/: CMakeLists.txt  main.cxx
examples/file-logger/: CMakeLists.txt  main.cxx
examples/parallel/: CMakeLists.txt  main.cxx
examples/pi-1/: CMakeLists.txt  main.cxx
examples/pi-2/: CMakeLists.txt  main.cxx
examples/signal/: CMakeLists.txt  main.cxx
include/task/: Algorithm.h  Chronometer.h  Counter.h  FileLogger.h  FlowAlgorithm.h  For.h  If.h  Logger.h  ParallelAlgorithm.h  ProgressMonitor.h  SignalSlot.h  SignalSlot.hxx  Switch.h  Task.h  TaskObserver.h  TaskQueue.h  Trigger.h  types.h
include/task/concurrent/: README.md  Runnable.h  ThreadPool.h  ThreadPool.hxx
include/task/concurrent/inline/: ThreadPool.hxx
include/task/inline/: Algorithm.hxx  SignalSlot.hxx  TaskQueue.hxx
src/: Algorithm.cxx  CMakeLists.txt  Chronometer.cxx  Counter.cxx  FileLogger.cxx  FlowAlgorithm.cxx  For.cxx  If.cxx  Logger.cxx  ParallelAlgorithm.cxx  ProgressMonitor.cxx  SignalSlot.cxx  Switch.cxx  Task.cxx  TaskObserver.cxx  TaskQueue.cxx  Trigger.cxx
src/concurrent/: Runnable.cxx  ThreadPool.cxx
src/task/: Algorithm.cxx  Chronometer.cxx  FlowAlgorithm.cxx  For.cxx  Logger.cxx  ParallelAlgorithm.cxx  SignalSlot.cxx  Task.cxx  Trigger.cxx
src/task/concurrent/: ThreadPool.cxx
unitTest/: CMakeLists.txt  TEST.h  algorithm.cxx  counter_test.cxx  ex1.cxx  fileLogger_test.cxx  flowAlgorithm_test.cxx  for.cxx  for_test.cxx  if_test.cxx  logger.cxx  parallel1.cxx  parallel2.cxx  workflow.cxx
